<resources>
    <string name="app_name">Wadool DP3A</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="title_activity_login">ActivityLogin</string>
    <string name="no_telp">No Telp</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="lupa_kata_sandi">Lupa Kata Sandi ?</string>
    <string name="masuk">Masuk</string>
    <string name="daftar_pengguna">Daftar Pengguna?</string>
    <string name="nama">Nama</string>
    <string name="alamat">Alamat</string>
    <string name="daftar">Daftar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pengaduan">Pengaduan</string>
    <string name="statistik">Statistik</string>
    <string name="halaman_utama">Halaman Utama</string>
    <string name="riwayat">Riwayat</string>
    <string name="pengguna">Pengguna</string>
    <string name="belum_direspon">Belum Direspon</string>
    <string name="sudah_teratasi">Sudah Teratasi</string>
    <string name="tidak_teratasi">Tidak Teratasi</string>
    <string name="tidak_bisa_dihubungi">Tidak Bisa Dihubungi</string>

    <string name="color_belum_direspon">#FFEB3B</string>
    <string name="color_sudah_teratasi">#4CAF50</string>
    <string name="color_tidak_teratasi">#F44336</string>
    <string name="color_tidak_bisa_dihubungi">#777070</string>
    <string name="color_on_proses">#FF7F00</string>
</resources>
