<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/fragmentPengaduan"
        android:title="@string/pengaduan"
        android:icon="@drawable/ic_pengaduan"/>
    <item
        android:id="@+id/fragmentStatistik"
        android:title="@string/statistik"
        android:icon="@drawable/ic_statistik"/>
    <item
        android:id="@+id/fragmentHalamanUtama"
        android:title="@string/halaman_utama"
        android:icon="@drawable/ic_home"/>
    <item
        android:id="@+id/fragmentRiwayat"
        android:title="@string/riwayat"
        android:icon="@drawable/ic_history"/>
    <item
        android:id="@+id/fragmentPengguna"
        android:title="@string/pengguna"
        android:icon="@drawable/ic_user"/>
</menu>